# Game-Off-2024-Jam

./: .gitignore  :w  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: main.cpp.BB62E2810C649C91.idx  test_sfml.cpp.B67B17D4BFF7215F.idx
src/: animation.cpp  animation.hpp  entity.hpp  game.cpp  game.hpp  input_manager.cpp  input_manager.hpp  level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  texture_manager.cpp
